--- a/ToYoDo/.classpath
+++ b/ToYoDo/.classpath
@@ -9,11 +9,11 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
-	<classpathentry kind="lib" path="F:/ToYoDo Update/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/hamcrest-2.2.jar"/>
-	<classpathentry kind="lib" path="F:/ToYoDo Update/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/hamcrest-core-2.2.jar"/>
-	<classpathentry kind="lib" path="F:/ToYoDo Update/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/json-simple-1.1.1.jar"/>
-	<classpathentry kind="lib" path="F:/ToYoDo Update/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="F:/ToYoDo Update/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/junit-4.13.2.jar"/>
-	<classpathentry kind="lib" path="F:/ToYoDo Update/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/mysql-connector-java-8.0.19.jar"/>
+	<classpathentry kind="lib" path="/Users/hrishikesh/Downloads/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/hamcrest-2.2.jar"/>
+	<classpathentry kind="lib" path="/Users/hrishikesh/Downloads/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/hamcrest-core-2.2.jar"/>
+	<classpathentry kind="lib" path="/Users/hrishikesh/Downloads/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/hrishikesh/Downloads/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/hrishikesh/Downloads/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/junit-4.13.2.jar"/>
+	<classpathentry kind="lib" path="/Users/hrishikesh/Downloads/CodeFury-Internal-2/ToYoDo/WebContent/WEB-INF/lib/mysql-connector-java-8.0.19.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
